--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,7 @@ services:
         max-file: "10"
     depends_on:
       - comex-redis
+      - communex-api
 
   communex-api:
     container_name: communex-api
