--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "nodemon -r dotenv/config src/main.ts",
     "dev:updater": "nodemon -r dotenv/config src/updater.ts",
     "build": "rimraf ./build && tsc",
-    "start": "node build/main.js"
+    "start": "node build/main.js",
+    "lint:fix": "eslint --ext .ts src --fix"
   },
   "devDependencies": {
     "@types/node": "^18.6.1",
