--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   comex-api:
     container_name: comex-api
-    restart: on-failure
+    restart: always
     build:
       dockerfile: Dockerfile
       context: .
@@ -20,7 +20,7 @@ services:
 
   comex-updater:
     container_name: comex-updater
-    restart: on-failure
+    restart: always
     build:
       dockerfile: Dockerfile
       context: .
@@ -38,7 +38,7 @@ services:
 
   communex-api:
     container_name: communex-api
-    restart: on-failure
+    restart: always
     image: mos4ic/communex-api:latest
     ports:
       - "9488:7860"
@@ -50,6 +50,7 @@ services:
 
   comex-redis:
     container_name: comex-redis
+    restart: always
     image: redis:latest
     logging:
       driver: "json-file"
